--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
 * {
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.main {
+  display: flex;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 900px;
+  flex-wrap: wrap;
+  margin-top: 5em;
+  padding: 2em;
+}
+.head {
+  border: 2px solid black;
+  width: 280px;
+  height: 60px;
+  font-size: 30px;
+}
+button {
+  width: 70px;
+  height: 60px;
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: 600;
 }
