--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 /*
 #root {
   background-color: gray;
@@ -93,11 +88,13 @@ h1 {
   justify-content: center;
   flex-direction: column;
   padding: 1em;
+  color: white;
   background-color: #f1f3f4;
 }
 
 h1 {
   margin-bottom: 1em;
+  color: black;
 }
 
 .main {
@@ -130,11 +127,36 @@ h1 {
   flex-direction: column;
   height: 200px;
 }
+.head-display {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.battery-container {
+  width: 30px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 5px;
+  position: relative;
+}
+.head-display .logo {
+  display: flex;
+  gap: 0.5em;
+}
+.battery-level {
+  background-color: green;
+  width: 50%;
+  height: 100%;
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .display input {
   text-align: right;
   border: none;
-  height: 50px;
+
   background-color: black;
   color: white;
   margin-top: 1em;
@@ -142,13 +164,16 @@ h1 {
 
 .small-display {
   font-size: 25px;
-  margin-bottom: 20px;
+  margin-bottom: 2px;
   margin-top: 1em;
+
+  text-align: left;
 }
 
 .large-display {
   font-size: 40px;
   margin-bottom: 0;
+  height: 100px;
 }
 
 .inputs {
